--- a/.github/workflows/1构建_ImmortalWrt_23.05.yml
+++ b/.github/workflows/1构建_ImmortalWrt_23.05.yml
@@ -32,6 +32,8 @@ on:
         type: boolean
 
 env:
+  OPENWRT_NAME: immortalwrt
+  UPLOAD_TAG_NAME: RAX_3000Z增强版
   REPO_URL: https://github.com/immortalwrt/immortalwrt
   REPO_BRANCH: openwrt-23.05
   FREE_DISK_SH: scripts/free_disk_space.sh
@@ -176,7 +178,7 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success' && !cancelled()
       run: |
-        echo -e "### immortalwrt-23.05-SNAPSHOT-rax3000m-emmc-ubootmod" >> release.txt
+        echo -e "### immortalwrt-23.05-SNAPSHOT-RAX_3000Z增强版-ubootmod" >> release.txt
         eeprom_status=""
         if [ -e openwrt/target/linux/mediatek/filogic/base-files/lib/firmware/mediatek/nx30pro_eeprom.bin ] ; then
           echo "- eeprom 使用 H3C NX30 Pro 提取版本" >> release.txt
@@ -187,7 +189,7 @@ jobs:
         fi
         max_frequency=$(($(grep -oP "max-frequency = <\K[0-9]*" openwrt/target/linux/mediatek/dts/mt7981b-cmcc-rax3000m-emmc-ubootmod.dts) / 1000000))
         echo "- 使用闪存频率: ${max_frequency}MHz" >> release.txt
-        release_tag=$(date +"%Y.%m.%d-23.05-SNAPSHOT-rax3000m-emmc-ubootmod-${eeprom_status}-${max_frequency}MHz")
+        release_tag=$(date +"%Y.%m.%d-${{ env.REPO_BRANCH }}-SNAPSHOT-${{ env.UPLOAD_TAG_NAME }}-ubootmod-${eeprom_status}-${max_frequency}MHz")
         echo "release_tag=${release_tag}" >> $GITHUB_OUTPUT
         echo "status=success" >> $GITHUB_OUTPUT
 
