--- a/configs/rax3000z-emmc.config
+++ b/configs/rax3000z-emmc.config
@@ -15,7 +15,7 @@ CONFIG_PACKAGE_kmod-usb-net-rndis=y
 
 ################
 ## passwall
-CONFIG_PACKAGE_luci-app-passwall=y
+# CONFIG_PACKAGE_luci-app-passwall is not set
 ## openclash
 CONFIG_PACKAGE_luci-app-openclash=y
 ## 简单mesh
@@ -50,7 +50,7 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 ## IP/MAC绑定
 CONFIG_PACKAGE_luci-app-arpbind=y
 ## 看IPTV的
-CONFIG_PACKAGE_luci-app-msd_lite=y
+# CONFIG_PACKAGE_luci-app-msd_lite is not set
 ## 网络唤醒
 CONFIG_PACKAGE_luci-app-wol=y
 ## KMS服务器
@@ -88,7 +88,7 @@ CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
 ## qb种子
 CONFIG_PACKAGE_luci-app-qbittorrent=y
 ## usb3开关
-CONFIG_PACKAGE_luci-app-usb3disable=y
+# CONFIG_PACKAGE_luci-app-usb3disable is not set
 ## usb打印服务器
 CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_kmod-usb-net-huawei-cdc-ncm=y
