--- a/.github/workflows/1构建_ImmortalWrt_23.05.yml
+++ b/.github/workflows/1构建_ImmortalWrt_23.05.yml
@@ -38,7 +38,7 @@ env:
   REPO_BRANCH: openwrt-23.05
   FREE_DISK_SH: scripts/free_disk_space.sh
   ENV_SH: scripts/environment.sh
-  DIY_SH: scripts/diy.sh
+  DIY_SH: scripts/1diy.sh
   CLASH_CORE: scripts/preset-clash-core.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: false
