--- a/configs/rax3000z-emmc.config
+++ b/configs/rax3000z-emmc.config
@@ -70,6 +70,7 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-arpbind=y
 ## 看IPTV的
 CONFIG_PACKAGE_luci-app-msd_lite=y
+CONFIG_PACKAGE_luci-i18n-msd_lite-zh-cn=y
 ## 网络唤醒
 CONFIG_PACKAGE_luci-app-wol=y
 ## KMS服务器
@@ -120,8 +121,6 @@ CONFIG_PACKAGE_kmod-usb-uhci=y
 CONFIG_PACKAGE_usb-modeswitch=y
 CONFIG_PACKAGE_sendat=y
 
-
-
 ## 在线安装alist所需依赖
 CONFIG_PACKAGE_kmod-fuse=y
 ## 在线安装docker所需依赖
@@ -138,6 +137,17 @@ CONFIG_PACKAGE_f2fs-tools=y
 CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_mmc-utils=y
 
+##
+## 访客WiFi 
+CONFIG_PACKAGE_luci-app-guest-wifi=y
+##定时/开机任务
+CONFIG_PACKAGE_luci-app-autotimeset=y
+## 家长控制
+CONFIG_PACKAGE_luci-app-parentcontrol=y
+##文件助手
+CONFIG_PACKAGE_luci-app-fileassistant=y
+##关机
+CONFIG_PACKAGE_luci-app-poweroff=y
 
 ###############################
 
