--- a/configs/rax3000z-emmc.config
+++ b/configs/rax3000z-emmc.config
@@ -148,6 +148,8 @@ CONFIG_PACKAGE_luci-app-parentcontrol=y
 CONFIG_PACKAGE_luci-app-fileassistant=y
 ##关机
 CONFIG_PACKAGE_luci-app-poweroff=y
+##上网时间控制
+CONFIG_PACKAGE_luci-app-timecontrol=y
 
 ###############################
 
